--- a/Helm/charts/process_recipe/templates/deployment.yaml
+++ b/Helm/charts/process_recipe/templates/deployment.yaml
@@ -1,23 +1,23 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: dispatcher
+  name: process-recipe
   namespace: {{ .Values.global.namespace }}
 spec:
   replicas: {{ .Values.replicas }}
   selector:
     matchLabels:
-      app: dispatcher
+      app: process-recipe
   template:
     metadata:
       labels:
-        app: dispatcher
+        app: process-recipe
     spec:
       securityContext:
         runAsUser: {{ .Values.global.runAsUser }}
         runAsGroup: {{ .Values.global.runAsGroup }}
       containers:
-      - name: dispatcher-runner
+      - name: process-recipe-runner
         image: {{ .Values.image }}
         imagePullPolicy: Always
         resources:
@@ -31,18 +31,14 @@ spec:
           - -c
           - >-
               {{ .Values.command }}
-        env:
-        - name: KUBERNETES
-          value: "1"
-        - name: ZOCALO_CONFIG
-          value: "/zocalo/config/{{ .Values.global.configFileName }}"
-        - name: ISPYB_CREDENTIALS
-          value: "/zocalo/secrets/{{ .Values.global.dbFileName }}"
         volumeMounts:
         - name: config-file
-          mountPath: /zocalo/config
+          mountPath: /cryoemservices/config
         - name: secrets
-          mountPath: /zocalo/secrets
+          mountPath: /cryoemservices/secrets
+{{- if .Values.global.extraGlobalVolumeMounts }}
+{{ toYaml .Values.global.extraGlobalVolumeMounts | indent 8 }}
+{{ end }}
 {{- if .Values.extraVolumeMounts }}
 {{ toYaml .Values.extraVolumeMounts | indent 8 }}
 {{ end }}
@@ -60,6 +56,9 @@ spec:
               name: {{ .Values.global.rmqSecretName }}
           - secret:
               name: {{ .Values.global.rmqApiSecretName }}
+{{- if .Values.global.extraGlobalVolumes }}
+{{ toYaml .Values.global.extraGlobalVolumes | indent 6 }}
+{{ end }}
 {{- if .Values.extraVolumes }}
 {{ toYaml .Values.extraVolumes | indent 6 }}
 {{ end }}
@@ -78,11 +77,11 @@ spec:
 apiVersion: keda.sh/v1alpha1
 kind: ScaledObject
 metadata:
-  name: dispatcher
+  name: process-recipe
   namespace: {{ .Values.global.namespace }}
 spec:
   scaleTargetRef:
-    name: dispatcher
+    name: process-recipe
   triggers:
     - type: rabbitmq
       metadata:
