Migrated recurring helper functions used in testing CLEM workflow to 'tests.util.clem'

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -169,3 +169,6 @@ max-line-length = "88"
 indent = 4
 keep_full_version = true
 max_supported_python = "3.12"
+
+[tool.pytest.ini_options]
+pythonpath= ["."]
