Helm changes needed to run membrain-seg on local GPU

--- a/Helm/values.yaml
+++ b/Helm/values.yaml
@@ -150,13 +150,10 @@ membrain_seg:
   replicas: 1
   image: gcr.io/image/path
   command: cryoemservices.service -s MembrainSeg -c /cryoemservices/config/cryoemservices_config.yaml
-  cpuRequest: "0.25"
-  cpuLimit: "0.5"
-  memoryLimit: 1Gi
-  scaleOnQueueLength: true
-  queueLengthTrigger: "10"
-  minReplicaCount: 0
-  maxReplicaCount: 2
+  cpuRequest: "1"
+  cpuLimit: "1"
+  memoryLimit: 25Gi
+  scaleOnQueueLength: false
 
 motioncorr:
   motioncorSIF: motioncor2.sif
