--- a/Helm/charts/membrain_seg/templates/deployment.yaml
+++ b/Helm/charts/membrain_seg/templates/deployment.yaml
@@ -22,8 +22,10 @@ spec:
         imagePullPolicy: Always
         resources:
           requests:
+            cpu: {{ .Values.cpuRequest }}
             nvidia.com/gpu: "1"
           limits:
+            cpu: {{ .Values.cpuLimit }}
             memory: {{ .Values.memoryLimit }}
             nvidia.com/gpu: "1"
         command: ["/bin/sh"]
@@ -31,6 +33,15 @@ spec:
           - -c
           - >-
               {{ .Values.command }}
+        env:
+          - name: MPLCONFIGDIR
+            value: "/tmp/matplotlib"
+          - name: MKL_NUM_THREADS
+            value: "1"
+          - name: NUMEXPR_NUM_THREADS
+            value: "1"
+          - name: OMP_NUM_THREADS
+            value: "1"
         volumeMounts:
         - name: config-file
           mountPath: /cryoemservices/config
