--- a/Helm/charts/tomo_align/templates/deployment.yaml
+++ b/Helm/charts/tomo_align/templates/deployment.yaml
@@ -22,8 +22,10 @@ spec:
         imagePullPolicy: Always
         resources:
           requests:
+            cpu: {{ .Values.cpuRequest }}
             nvidia.com/gpu: "1"
           limits:
+            cpu: {{ .Values.cpuLimit }}
             memory: {{ .Values.memoryLimit }}
             nvidia.com/gpu: "1"
         command: ["/bin/sh"]
