--- a/Helm/values.yaml
+++ b/Helm/values.yaml
@@ -52,6 +52,15 @@ cryolo:
   minReplicaCount: 0
   maxReplicaCount: 4
 
+cryolo_gpu:
+  replicas: 1
+  image: gcr.io/image/path
+  command: cryoemservices.service -s CrYOLO -c /cryoemservices/config/cryoemservices_config.yaml --queue cryolo_gpu
+  cpuRequest: "1"
+  cpuLimit: "1"
+  memoryLimit: 6Gi
+  scaleOnQueueLength: false
+
 ctffind:
   replicas: 1
   image: gcr.io/image/path
