Prettier also needs to be configured to ignore deployment.yaml files

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -80,4 +80,5 @@ repos:
     hooks:
       - id: prettier
         name: Formatting other file types according to Prettier
+        exclude: Helm/charts/.*?/templates/deployment\.yaml
         # types_or: [css, html, json, yaml]
