--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,6 +17,7 @@ repos:
         name: Verifying JSON file syntax
       - id: check-yaml
         name: Verifying YAML file syntax
+        exclude: Helm/charts/.*?/templates/deployment\.yaml
         args: [--allow-multiple-documents]
       - id: check-toml
         name: Verifying TOML file syntax
@@ -79,4 +80,5 @@ repos:
     hooks:
       - id: prettier
         name: Formatting other file types according to Prettier
+        exclude: Helm/charts/.*?/templates/deployment\.yaml
         # types_or: [css, html, json, yaml]
