--- a/Helm/charts/denoise/templates/deployment.yaml
+++ b/Helm/charts/denoise/templates/deployment.yaml
@@ -82,6 +82,10 @@ spec:
       nodeSelector:
 {{ toYaml .Values.global.nodeSelector | indent 8 }}
 {{ end }}
+{{- if .Values.global.imagePullSecrets }}
+      imagePullSecrets:
+      - name: {{ .Values.global.imagePullSecrets }}
+{{ end }}
 
 {{- if .Values.scaleOnQueueLength }}
 ---
