--- a/Helm/charts/select_classes/templates/deployment.yaml
+++ b/Helm/charts/select_classes/templates/deployment.yaml
@@ -58,6 +58,15 @@ spec:
 {{- if .Values.extraVolumes }}
 {{ toYaml .Values.extraVolumes | indent 6 }}
 {{ end }}
+
+{{- if .Values.global.tolerations }}
+      tolerations:
+{{ toYaml .Values.global.tolerations | indent 6 }}
+{{ end }}
+{{- if .Values.global.nodeSelector }}
+      nodeSelector:
+{{ toYaml .Values.global.nodeSelector | indent 8 }}
+{{ end }}
 {{- if .Values.global.imagePullSecrets }}
       imagePullSecrets:
       - name: {{ .Values.global.imagePullSecrets }}
