--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ dependencies = [
     "pydantic>=2",
     "pystackreg", # CLEM workflow
     "readlif", # CLEM workflow
+    "requests",
     "SimpleITK", # CLEM workflow
     "starfile",
     "stomp-py==8.1.0",
@@ -96,8 +97,6 @@ dev = [
     SelectParticles = "cryoemservices.services.select_particles:SelectParticles"
     TomoAlign = "cryoemservices.services.tomo_align:TomoAlign"
     TomoAlignSlurm = "cryoemservices.services.tomo_align_slurm:TomoAlignSlurm"
-[project.entry-points."cryoemservices.services.cluster.schedulers"]
-    slurm = "cryoemservices.services.cluster_submission:submit_to_slurm"
 [project.entry-points."cryoemservices.services.images.plugins"]
     "mrc_central_slice" = "cryoemservices.services.images_plugins:mrc_central_slice"
     "mrc_to_apng" = "cryoemservices.services.images_plugins:mrc_to_apng"
