--- a/Helm/values.yaml
+++ b/Helm/values.yaml
@@ -31,11 +31,23 @@ bfactor_setup:
   minReplicaCount: 0
   maxReplicaCount: 1
 
+clem_align_and_merge:
+  replicas: 1
+  image: gcr.io/image/path
+  command: cryoemservices.service -s CLEMAlignAndMerge -c /cryoemservices/config/cryoemservices_config.yaml
+  cpuRequest: "1"
+  cpuLimit: "4"
+  memoryLimit: 64Gi
+  scaleOnQueueLength: true
+  queueLengthTrigger: "4"
+  minReplicaCount: 1
+  maxReplicaCount: 8
+
 clem_process_raw_lifs:
   replicas: 1
   image: gcr.io/image/path
   command: cryoemservices.service -s CLEMLIFToStack -c /cryoemservices/config/cryoemservices_config.yaml
-  cpuRequest: "4"
+  cpuRequest: "1"
   cpuLimit: "4"
   memoryLimit: 64Gi
   scaleOnQueueLength: true
