--- a/.bumpversion.toml
+++ b/.bumpversion.toml
@@ -24,6 +24,21 @@ search = 'version: {current_version}'
 replace = 'version: {new_version}'
 
 [[tool.bumpversion.files]]
+filename = "Helm/charts/clem_align_and_merge/Chart.yaml"
+search = 'version: {current_version}'
+replace = 'version: {new_version}'
+
+[[tool.bumpversion.files]]
+filename = "Helm/charts/clem_process_raw_lifs/Chart.yaml"
+search = 'version: {current_version}'
+replace = 'version: {new_version}'
+
+[[tool.bumpversion.files]]
+filename = "Helm/charts/clem_process_raw_tiffs/Chart.yaml"
+search = 'version: {current_version}'
+replace = 'version: {new_version}'
+
+[[tool.bumpversion.files]]
 filename = "Helm/charts/cluster_submission/Chart.yaml"
 search = 'version: {current_version}'
 replace = 'version: {new_version}'
