Added services for existing CLEM workflows (#171)
* Added services for the LIF processing, TIFF processing, and image aligning and merging CLEM workflows, along with their entry points, Helm charts, and tests
* Updated 'cryoemservices_cpu' Dockerfile so that it uses the repo for building

--- a/Helm/Chart.yaml
+++ b/Helm/Chart.yaml
@@ -4,6 +4,9 @@ description: An umbrella Helm chart for EM processing services
 version: 1.2.4
 dependencies:
   - name: bfactor_setup
+  - name: clem_align_and_merge
+  - name: clem_process_raw_lifs
+  - name: clem_process_raw_tiffs
   - name: cluster_submission
   - name: cryolo
   - name: cryolo_gpu
