Create services for the classification jobs (#176)
Adds the option to run classification jobs as services.

These can take much longer than the rabbitmq timeout of 30 minutes, so rather than hold the message they acknowledge as soon as the process starts, then resend any failed messages to the queue.
To replicate the nacking behaviour on failure, they record the number of reinjections and nack after 5.

The diff for this PR is very large as the wrapper code had to be broken into separate functions, but the amount of new code is relatively small.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -83,6 +83,8 @@ dev = [
     CLEMLIFToStack = "cryoemservices.services.clem_process_raw_lifs:LIFToStackService"
     CLEMTIFFToStack = "cryoemservices.services.clem_process_raw_tiffs:TIFFToStackService"
     CTFFind = "cryoemservices.services.ctffind:CTFFind"
+    Class2D = "cryoemservices.services.class2d:Class2D"
+    Class3D = "cryoemservices.services.class3d:Class3D"
     ClusterSubmission = "cryoemservices.services.cluster_submission:ClusterSubmission"
     CrYOLO = "cryoemservices.services.cryolo:CrYOLO"
     Denoise = "cryoemservices.services.denoise:Denoise"
@@ -97,6 +99,7 @@ dev = [
     NodeCreator = "cryoemservices.services.node_creator:NodeCreator"
     PostProcess = "cryoemservices.services.postprocess:PostProcess"
     ProcessRecipe = "cryoemservices.services.process_recipe:ProcessRecipe"
+    Refine3D = "cryoemservices.services.refine3d:Refine3D"
     SelectClasses = "cryoemservices.services.select_classes:SelectClasses"
     SelectParticles = "cryoemservices.services.select_particles:SelectParticles"
     TomoAlign = "cryoemservices.services.tomo_align:TomoAlign"
