Service to pick particles with topaz (#132)
This will allow picking to be done using topaz rather than cryolo.
Useful for:
 -   Doppio-live
 -   Cases where someone has a trained topaz model
 -   Consensus picking between cryolo and topaz?

However, it isn't immediately usabe for the auto-processing as it requires a particle diameter to be input, and we currently have no way to get that in Murfey or to switch between cryolo and topaz.

This branch exists from a while ago when thinking about how to estimate the particle diameter automatically, but the service is functional without that so can go in.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,6 +58,10 @@ dev = [
     "pytest-datafiles",
     "pytest-mock",
 ]
+torch = [
+    "membrain-seg",
+    "topaz-em",
+]
 [project.urls]
     Bug-Tracker = "https://github.com/DiamondLightSource/cryoem-services/issues"
     GitHub = "https://github.com/DiamondLightSource/cryoem-services"
@@ -104,6 +108,7 @@ dev = [
     SelectParticles = "cryoemservices.services.select_particles:SelectParticles"
     TomoAlign = "cryoemservices.services.tomo_align:TomoAlign"
     TomoAlignSlurm = "cryoemservices.services.tomo_align_slurm:TomoAlignSlurm"
+    TopazPick = "cryoemservices.services.topaz_pick:TopazPick"
 [project.entry-points."cryoemservices.services.images.plugins"]
     "mrc_central_slice" = "cryoemservices.services.images_plugins:mrc_central_slice"
     "mrc_to_apng" = "cryoemservices.services.images_plugins:mrc_to_apng"
