--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,8 +67,8 @@ torch = [
     GitHub = "https://github.com/DiamondLightSource/cryoem-services"
 [project.scripts]
     "clem.align_and_merge" = "cryoemservices.cli.clem_align_and_merge:run"
-    "clem.lif_to_stack" = "cryoemservices.cli.clem_lif_to_stack:run"
-    "clem.tiff_to_stack" = "cryoemservices.cli.clem_tiff_to_stack:run"
+    "clem.process_raw_lifs" = "cryoemservices.cli.clem_process_raw_lifs:run"
+    "clem.process_raw_tiffs" = "cryoemservices.cli.clem_process_raw_tiffs:run"
     "combine_star_files" = "cryoemservices.pipeliner_plugins.combine_star_files:main"
     "cryoemservices.angular_distribution_plot" = "cryoemservices.pipeliner_plugins.angular_distribution_plot:run"
     "cryoemservices.angular_efficiency" = "cryoemservices.pipeliner_plugins.angular_efficiency:run"
