Renamed CLEM wrapper entry points

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -120,8 +120,8 @@ torch = [
     ispyb = "cryoemservices.util.process_recipe_tools:ispyb_filter"
 [project.entry-points."cryoemservices.wrappers"]
     CLEMAlignAndMerge = "cryoemservices.wrappers.clem_align_and_merge:AlignAndMergeWrapper"
-    CLEMLIFToStack = "cryoemservices.wrappers.clem_process_raw_lifs:LIFToStackWrapper"
-    CLEMTIFFToStack = "cryoemservices.wrappers.clem_process_raw_tiffs:TIFFToStackWrapper"
+    CLEMProcessRawLIFs = "cryoemservices.wrappers.clem_process_raw_lifs:ProcessRawLIFsWrapper"
+    CLEMProcessRawTIFFs = "cryoemservices.wrappers.clem_process_raw_tiffs:ProcessRawTIFFsWrapper"
     Class2D = "cryoemservices.wrappers.class2d_wrapper:Class2DWrapper"
     Class3D = "cryoemservices.wrappers.class3d_wrapper:Class3DWrapper"
     Refine3D = "cryoemservices.wrappers.refine3d_wrapper:Refine3DWrapper"
